<?xml version="1.0" encoding="utf-8"?>

<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/master_list_fragment"
    android:name="com.example.osos.mahmoudbakingapp.fragment.MasterListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.osos.mahmoudbakingapp.activity.DetailActivity"
    tools:layout="@layout/fragment_step" />